@@ -46,6 +46,7 @@ PHP 4                                                                      NEWS
 - Fixed bug #25109 (Possible crash when fetching field names in pgsql). (Ilia)
 - Fixed bug #25106 (Added more stringent checks on bzopen() mode). (Ilia)
 - Fixed bug #25218 ("deflate" compressed pages had a gzip header). (Stefan)
+- Fixed bug #24402 (Compile failure with gettext 0.12.x). (Jani)
 - Fixed bug #23326 (ext/domxml: Attributes via append_child not supported).
   (Melvyn)
 - Fixed bug #21220 (Wrong Apache version shown in phpinfo() output). (Jani)
